assets/css/main.css
* {
  margin: 0;
  padding: 0;
  outline: none;
  border: 0;
}

html, body {
  height: 100%;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  background-color: #efefef;
  font-size: 18px;
}

h1, h2, h3, h4, p {
  line-height: 1.5em;
  margin-bottom: 1em;
  color: #333;
}

/* Inputs */
input {
  padding: 16px;
  font-size: 16px;
  background: #efefef;
  width: 100%;
  box-sizing: border-box;
  color: blue;
  border-bottom: 2px solid #ccc;
}
input:hover:not(:disabled) {
  border-color: blue;
}
input:disabled {
  opacity: 0.7;
  background-color: #ccc;
  color: #666;
}
input:focus {
  border-color: blue;
}
input::placeholder {
  color: #777;
  opacity: 0.5;
}

/* Links */
a:not(.button), a:not(.button):visited, a:not(.button):active {
  text-decoration: none;
  color: blue;
  padding-bottom: 2px;
}

a:not(.button):hover {
  border-bottom: 1px solid #3131ff;
  transition: color .3s;
}

header {
  width: 100%;
  background-color: #FFFFFF;
  box-sizing: border-box;
  position: fixed;
  z-index: 20;
  top: 0;
  left: 0;
  overflow: visible;
  border-bottom: 1px solid blue;
}

header .wrap {
  width: 1040px;
  margin: 0 auto;
}

header a.logo {
  display: block;
  text-indent: -100000px;
  background: transparent url(/images/bishack.svg) center center /contain no-repeat;
  width: 200px;
  height: 32px;
  position: relative;
  border: 0 !important;
}

header .left, header .right {
  display: flex;
  align-items: center;
  height: 64px;
}
header .left {
  text-align: left;
}
header .right {
  text-align: right;
}

header nav.main-nav {
  text-align: right;
}

/* Buttons */
.button {
  text-decoration: none;
  opacity: 1 !important;
  border-radius: 5px;
  letter-spacing: 1px;
  padding: 8px 24px;
  font-weight: bold;
  font-size: 16px;
  display: inline-block;
  color: #666;
  background-color: #CCCCCC;
  border-bottom: solid 5px #888;
  cursor: pointer;
  position: relative;
  bottom: 0;
  transition: all .3s;
}
button.button {
  padding: 13px 20px;
}
.button.full {
  width: 100%;
  box-sizing: border-box;
}
.button:hover {
  background-color: #bbbbbb;
  transition: all .3s;
}
.primary, .primary:active {
  color: #ffffff !important;
  border-color: darkblue;
  background-color: blue;
}
.primary:hover {
  background-color: #0064ff;
}
.success, .success:active {
  color: #ffffff !important;
  border-color: darkgreen;
  background-color: green;
}
.success:hover {
  background-color: #00a200;
}
.button:disabled {
  background-color: #cccccc;
  border-color: #aaaaaa;
  color: #aaaaaa;
  cursor: default;
}

/* Flash */
.flash {
  position: fixed;
  top: 68px;
  left: 50%;
  transform: translateX(-50%);
  font-size: 16px;
  max-width: 400px;
  padding: 12px 20px;
  letter-spacing: 0.2px;
  background-color: #ffffff;
  box-shadow: 0px 5px 10px 1px rgba(0,0,0,0.2);
  z-index: 30;
}
.flash.error {
  background-color: #ff3333;
  color: white;
  box-shadow: 0px 5px 10px 1px rgb(255, 136, 136);
}
.flash.success {
  background-color: #00bb00;
  color: white;
  box-shadow: 0px 5px 10px 1px rgba(0, 128, 0, 0.36);
}

/* Layout */
.center-flex-box {
  position: relative;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.card {
  position: relative;
  padding: 32px;
  background-color: #FFFFFF;
}
.kahon {
  width: 500px;
  box-sizing: border-box;
}

/* Orientation */
.center {
  text-align: center;
}
.right {
  float: right;
}
.left {
  float: left;
}
.clear {
  clear: both;
}

/* Misc */
.turbolinks-progress-bar {
  height: 3px;
  background-color: blue;
  z-index: 100;
}

.div {
  opacity: 0.3;
  font-size: 1em;
  padding: 0 16px;
}

.sub {
  opacity: 0.3;
  font-size: 1em;
}

.join {
  position: relative;
  display: inline-block;
  top: -4px;
  left: 6px;
}

.circle {
  border-radius: 100px;
}

.wrapper {
  position: relative;
  margin: 0 auto;
  box-sizing: border-box;
  height: 100%;
  width: 1040px;
}

.dropdown {
  position: relative;
  display: inline-block;
  overflow: visible;
  box-sizing: border-box;
  cursor: pointer;
}
.dropdown > ul {
  visibility: hidden;
  list-style-type: : none;
  position: absolute;
  min-width: 144px;
  right: 0;
  top: 40px;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 0 5px 10px rgba(0,0,0,0.1);
}
.dropdown > ul:before {
  content: '';
  position: absolute;
  top: -64px;
  left: 0px;
  display: block;
  height: 64px;
  width: 100%;
}
.dropdown > ul > li {
  text-align: left;
  list-style-type: none;
}
.dropdown > ul > li > a, .dropdown > ul > li > a:active {
  position: relative;
  display: block;
  text-decoration: none;
  color: #666666 !important;
  padding: 12px 24px;
  border-bottom: 1px solid rgba(0,0,0,0.1);
}
.dropdown > ul > li > a:hover {
  border-color: rgba(0,0,0,0.1);
  background-color: rgba(0,0,0,0.05);
}
.dropdown:hover > ul {
  visibility: visible;
  top: 60px;
  transition: all .5s cubic-bezier(0.19, 1, 0.22, 1);
}

.container {
  height: 100%;
  box-sizing: border-box;
  padding-top: 108px;
}
.container .profile {
  width: 320px;
  float: left;
  box-sizing: border-box;
}
.container .content {
  width: 720px;
  float: right;
  padding-left: 32px;
  box-sizing: border-box;
}

.user-card {
  box-sizing: border-box;
  padding: 24px;
  background-color: #fff;
  border: 1px solid blue;
}

